fixed table selection not showing when other style in place

--- a/public/styles.css
+++ b/public/styles.css
@@ -154,7 +154,10 @@ left: -3000px;
 	background: rgb(179,216,253);
 }
 
-td.selected, th.selected {
+table.pure-table td.selected,
+table.pure-table th.selected,
+td.selected,
+th.selected {
 	background: rgb(179,216,253);
 }
 
